<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_Profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_profile" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/about_us"
            android:title="@string/nav_about_us" />
        <item
            android:id="@+id/nav_Feedback"
            android:icon="@drawable/feedback"
            android:title="@string/nav_Feedback" />
    </group>



</menu>