<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:layout_height="200dp"
        android:layout_width="match_parent">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:toolbarId="@+id/toolbar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
            app:contentScrim="?attr/colorPrimary">

            <ImageView
                android:id="@+id/app_bar_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax"
                android:src="@drawable/material_3"
                android:scaleType="fitXY" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent">

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">
            <!-- <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:scaleType="fitXY"
                 android:layout_marginTop="20dp"
                 android:background="?actionBarItemBackground"
                 android:src="@drawable/welc"/>-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">




                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:orientation="vertical">
                    <android.support.v7.widget.CardView

                        card_view:contentPadding="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="145dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        card_view:cardBackgroundColor="#9e9e9e"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        card_view:cardCornerRadius="4dp"
                        android:layout_marginTop="25dp"
                        android:id="@+id/cardView1">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:elevation="4dp"
                            android:textSize="30sp"
                            android:textColor="@android:color/white"
                            android:gravity="center"
                            android:text="@string/card_2"/>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView


                        card_view:contentPadding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="145dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:layout_marginLeft="10dp"
                        card_view:cardCornerRadius="4dp"
                        card_view:cardBackgroundColor="#009688"
                        android:layout_marginTop="5dp"
                        card_view:cardElevation="4dp"
                        android:id="@+id/cardView3">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/card_3"
                            android:textSize="25sp"
                            android:gravity="center"

                            android:layout_gravity="center"
                            android:textColor="@android:color/white"/>


                    </android.support.v7.widget.CardView>
                </LinearLayout>
                <android.support.v7.widget.CardView

                    card_view:contentPadding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_marginEnd="10dp"
                    card_view:cardElevation="4dp"
                    android:layout_marginStart="10dp"
                    card_view:cardBackgroundColor="#e91e63"
                    card_view:cardCornerRadius="4dp"
                    android:layout_marginTop="25dp"

                    android:id="@+id/cardView2">
                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:elevation="4dp"
                        android:gravity="center"
                        android:text="@string/card_4"

                        android:textColor="#fff"
                        android:textSize="30sp" />
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <android.support.v7.widget.CardView


                card_view:contentPadding="5dp"
                android:layout_width="match_parent"
                android:layout_height="145dp"
                android:id="@+id/cardView4"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                card_view:cardElevation="4dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginBottom="40dp"
                card_view:cardBackgroundColor="#3f51b5"
                card_view:cardCornerRadius="4dp"
                android:layout_marginTop="21dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/card_5"
                    android:layout_marginTop="2dp"
                    android:textSize="30dp"
                    android:layout_gravity="center"

                    android:textColor="@android:color/white"
                    android:gravity="center"/>



            </android.support.v7.widget.CardView>



        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
